# WenzurClient

./: .gitignore  CMakeLists.txt  README.md  index.html  package.json  tailwind.config.js
include/: alert.h  browser_paths.h  honeypot.h  logger.h  monitor.h  process_scanner.h
src/: App.tsx  alert.cpp  browser_paths.cpp  honeypot.cpp  logger.cpp  main.cpp  monitor.cpp  process_scanner.cpp  skinview3d.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: auth.rs  launcher.rs  lib.rs  main.rs
src/components/: Sidebar.tsx  SkinViewer.tsx  TitleBar.tsx
src/pages/: HomePage.tsx  InstancesPage.tsx  LoginPage.tsx  ModsPage.tsx  SettingsPage.tsx  SkinsPage.tsx
src/styles/: globals.css
