[package]
name = "wenz-launcher"
version = "0.1.0"
description = "WenzLauncher — Minecraft launcher в стиле Lunar Client"
authors = ["CAPYBERA099"]
edition = "2021"

[lib]
name = "wenz_launcher_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
dirs = "6"
sha1 = "0.10"
uuid = { version = "1", features = ["v4"] }
futures-util = "0.3"
